Sources/MyHotelService/deployments.databases.mongo.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-hotel-service.databases.mongo
spec:
  containers:
    - name: mongo
      image: mongo
      ports:
        - containerPort: 27017
