Sources/MyHotelService/deployments.reservationservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
  namespace: my-hotel-service
spec:
  selector:
    matchLabels:
      app: reservation-service
  replicas: 1
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - name: reservation-service
          image: cooco119/my-hotel-service.reservation-service:latest
          ports:
            - containerPort: 5000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
  namespace: my-hotel-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
  selector:
    app: reservation-service
