Sources/MyHotelService/services.dbservice.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    run: db-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
